Bug #312275 --> support multiple send listeners on a compose object. patch by Ivo van Dongen <ivo@func.nl> and Matthijs Wensveen <mrw@wanadoo.nl> r=neil sr=mscott